WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24034
Fix up another VisibleSelection change
https://bugs.webkit.org/show_bug.cgi?id=24034
Summary
Fix up another VisibleSelection change
Dimitri Glazkov (Google)
Reported
2009-02-19 11:39:56 PST
I think this is the last one.
Attachments
fix up VisibleSelection change, v1
(1.35 KB, patch)
2009-02-19 11:41 PST
,
Dimitri Glazkov (Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-02-19 11:41:37 PST
Created
attachment 27802
[details]
fix up VisibleSelection change, v1 WebCore/ChangeLog | 11 +++++++++++ WebCore/page/chromium/EventHandlerChromium.cpp | 2 +- 2 files changed, 12 insertions(+), 1 deletions(-)
Eric Seidel (no email)
Comment 2
2009-02-19 13:31:26 PST
Comment on
attachment 27802
[details]
fix up VisibleSelection change, v1 Sigh. :) r=me
Dimitri Glazkov (Google)
Comment 3
2009-02-19 13:36:27 PST
Landed as
http://trac.webkit.org/changeset/41085
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug