2009-02-19  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24034
        Fix up Selection->VisibleSelection change.

        * page/chromium/EventHandlerChromium.cpp:
        (WebCore::EventHandler::passMousePressEventToSubframe): Renamed Selection
        to VisibleSelection.

Canonical link: https://commits.webkit.org/33170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41085 268f45cc-cd09-0410-ab3c-d52691b4dbfc